--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             <nav>
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                        <a href="/" class="text-green-500 sm:text-red-500 sm:text-xl">Food Ninja</a>
+                        <a href="/" class="sm:text-xl">Food Ninja</a>
                     </h1>
                 </div>
                 <ul>
@@ -34,7 +34,7 @@
             </nav>
         </div><!-- end nav -->
 
-        <main class="px-16 py-6">
+        <main class="px-16 py-6 bg-gray-100">
             <div class="flex justify-center md:justify-end">
                 <a href="#" class="text-primary">Log in</a>
                 <a href="#" class="text-primary ml-2">Sign up</a>
@@ -49,11 +49,11 @@
 
                 <div class="mt-8">
                     <!--cards go here-->
-                    <div>
-                        <img src="img/stew.jpg" alt="">
-                        <div>
-                            <span>5 Bean Chilli Stew</span>
-                            <span>Recipe by Mario</span>
+                    <div class="bg-white rounded overflow-hidden shadow-md">
+                        <img src="img/stew.jpg" alt="" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">5 Bean Chilli Stew</span>
+                            <span class="block text-gray-500 text-sm">Recipe by Mario</span>
                         </div>
                     </div>
 
