Basic button design

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
 
         <main class="px-16 py-6 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end">
-                <a href="#" class="text-primary">Log in</a>
-                <a href="#" class="text-primary ml-2">Sign up</a>
+                <a href="#" class="btn text-primary border-primary md:border-2">Log in</a>
+                <a href="#" class="btn text-primary ml-2 border-primary md:border-2">Sign up</a>
             </div>
             <header>
                 <h2 class="text-gray-700 text-6xl font-semibold">Recipes</h2>
@@ -47,7 +47,7 @@
             <div>
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
 
-                <div class="mt-8 grid md:grid-cols-3 gap-10">
+                <div class="mt-8 grid lg:grid-cols-3 gap-10">
                     <!--cards go here-->
                     <div class="card">
                         <img src="img/stew.jpg" alt="stew" class="w-full h-32 sm:h-48 object-cover">
@@ -82,6 +82,28 @@
                         </div>
                     </div>
 
+                    <div class="card">
+                        <img src="img/curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">Tofu Curry</span>
+                            <span class="block text-gray-500 text-sm">Recipe by Mario</span>
+                        </div>
+                        <div class="badge">
+                            <span>35 mins</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">Tofu Curry</span>
+                            <span class="block text-gray-500 text-sm">Recipe by Mario</span>
+                        </div>
+                        <div class="badge">
+                            <span>35 mins</span>
+                        </div>
+                    </div>
+
                 </div>
 
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
@@ -91,7 +113,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="bg-secondary-100 text-secondary-200">Load more</div>
+                    <div class="btn bg-secondary-100 text-secondary-200">Load more</div>
                 </div>
 
             </div>
