--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             <nav>
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
-                        <a href="/" class="sm:text-xl">Food Ninja</a>
+                        <a href="/" class="sm:text-xl hover:text-gray-700">Food Ninja</a>
                     </h1>
                 </div>
                 <ul>
@@ -45,8 +45,8 @@
 
         <main class="px-16 py-6 bg-gray-100 md:col-span-2">
             <div class="flex justify-center md:justify-end">
-                <a href="#" class="btn text-primary border-primary md:border-2">Log in</a>
-                <a href="#" class="btn text-primary ml-2 border-primary md:border-2">Sign up</a>
+                <a href="#" class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
+                <a href="#" class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white">Sign up</a>
             </div>
             <header>
                 <h2 class="text-gray-700 text-6xl font-semibold">Recipes</h2>
@@ -58,7 +58,7 @@
 
                 <div class="mt-8 grid lg:grid-cols-3 gap-10">
                     <!--cards go here-->
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img src="img/stew.jpg" alt="stew" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
                             <span class="font-bold">5 Bean Chilli Stew</span>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img src="img/noodles.jpg" alt="noodles" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
                             <span class="font-bold">Veg Noodles</span>
@@ -86,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img src="img/curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
                             <span class="font-bold">Tofu Curry</span>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img src="img/curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
                             <span class="font-bold">Tofu Curry</span>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card hover:shadow-lg">
                         <img src="img/curry.jpg" alt="curry" class="w-full h-32 sm:h-48 object-cover">
                         <div class="m-4">
                             <span class="font-bold">Tofu Curry</span>
@@ -137,7 +137,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="btn bg-secondary-100 text-secondary-200">Load more</div>
+                    <div class="btn bg-secondary-100 text-secondary-200 hover:shadow-inner">Load more</div>
                 </div>
 
             </div>
